build/log/idf_py_stdout_output_63562
[1/9] Performing build step for 'bootloader'
[1/1] cd "/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/build/bootloader/esp-idf/esptool_py" && /home/studiopresent/.espressif/python_env/idf5.3_py3.12_env/bin/python /home/studiopresent/ESP/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++\ implementation/Smart_Lock/build/bootloader/bootloader.bin
Bootloader binary size 0x5500 bytes. 0x2b00 bytes (34%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building CXX object esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj
FAILED: esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj 
/home/studiopresent/.espressif/tools/riscv32-esp-elf/esp-13.2.0_20240530/riscv32-esp-elf/bin/riscv32-esp-elf-g++ -DESP_PLATFORM -DIDF_VER=\"v5.3-dirty\" -DRCP_COMPILE_DEFINE="\"zigbee-e0991facf5-95aef93-1.0.9-2024-08-27 08:25:26 UTC\"" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/build/config" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include" -I/home/studiopresent/ESP/esp-idf/components/newlib/platform_include -I/home/studiopresent/ESP/esp-idf/components/freertos/config/include -I/home/studiopresent/ESP/esp-idf/components/freertos/config/include/freertos -I/home/studiopresent/ESP/esp-idf/components/freertos/config/riscv/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/studiopresent/ESP/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/studiopresent/ESP/esp-idf/components/freertos/esp_additions/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include/soc -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/include/soc/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/dma/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/ldo/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/. -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/esp_hw_support/port/esp32c6/private_include -I/home/studiopresent/ESP/esp-idf/components/heap/include -I/home/studiopresent/ESP/esp-idf/components/log/include -I/home/studiopresent/ESP/esp-idf/components/soc/include -I/home/studiopresent/ESP/esp-idf/components/soc/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/soc/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/hal/platform_port/include -I/home/studiopresent/ESP/esp-idf/components/hal/esp32c6/include -I/home/studiopresent/ESP/esp-idf/components/hal/include -I/home/studiopresent/ESP/esp-idf/components/esp_rom/include -I/home/studiopresent/ESP/esp-idf/components/esp_rom/include/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_rom/esp32c6 -I/home/studiopresent/ESP/esp-idf/components/esp_common/include -I/home/studiopresent/ESP/esp-idf/components/esp_system/include -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/soc -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/include/riscv -I/home/studiopresent/ESP/esp-idf/components/esp_system/port/include/private -I/home/studiopresent/ESP/esp-idf/components/riscv/include -I/home/studiopresent/ESP/esp-idf/components/lwip/include -I/home/studiopresent/ESP/esp-idf/components/lwip/include/apps -I/home/studiopresent/ESP/esp-idf/components/lwip/include/apps/sntp -I/home/studiopresent/ESP/esp-idf/components/lwip/lwip/src/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/freertos/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/studiopresent/ESP/esp-idf/components/lwip/port/esp32xx/include/sys -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zigbee-lib/include" -I"/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/managed_components/espressif__esp-zboss-lib/include" -I/home/studiopresent/ESP/esp-idf/components/nvs_flash/include -I/home/studiopresent/ESP/esp-idf/components/spi_flash/include -I/home/studiopresent/ESP/esp-idf/components/esp_partition/include -I/home/studiopresent/ESP/esp-idf/components/esp_driver_uart/include -I/home/studiopresent/ESP/esp-idf/components/vfs/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap "-fmacro-prefix-map=/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock=." -fmacro-prefix-map=/home/studiopresent/ESP/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj -MF esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj.d -o esp-idf/zigbee/CMakeFiles/__idf_zigbee.dir/src/zigbee.cpp.obj -c '/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp'
In file included from /home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:1:
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/include/zigbee.hpp:50:32: error: 'constexpr' needed for in-class initialization of static data member 'const char* Zigbee::Zigbee::TAG' of non-integral type [-fpermissive]
   50 |             static const char *TAG = "ESP32_LOCK_UART";
      |                                ^~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp: In static member function 'static void Zigbee::Zigbee::esp_zb_app_signal_handler(esp_zb_app_signal_t*)':
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:17:47: error: cannot call member function 'void Zigbee::Zigbee::start_high_level_commissioning(uint8_t)' without object
   17 |                 start_high_level_commissioning(ESP_ZB_BDB_MODE_INITIALIZATION);
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:24:55: error: cannot call member function 'void Zigbee::Zigbee::start_high_level_commissioning(uint8_t)' without object
   24 |                         start_high_level_commissioning(ESP_ZB_BDB_MODE_NETWORK_STEERING);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp: In static member function 'static esp_err_t Zigbee::Zigbee::action_handler(esp_zb_core_action_callback_id_t, const void*)':
/home/studiopresent/IoT/Smart_lock/Firmware/Lock_Controller/C++ implementation/Smart_Lock/components/zigbee/src/zigbee.cpp:63:49: error: cannot call member function 'esp_err_t Zigbee::Zigbee::attribute_handler(const esp_zb_zcl_set_attr_value_message_t*)' without object
   63 |                 error_status = attribute_handler((esp_zb_zcl_set_attr_value_message_t *)message);
      |                                ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
